fixed alignment

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,11 +1,6 @@
 @import "../../../colors";
 
 .featured-section{
-  padding-left: 1vh;
-  padding-right: 1vh;
-  padding-bottom: 1vh;
-  padding-top: 1vh;
-
+  padding: 1vh;
   background-color: $primary;
-  //height: 100vh;
 }
